--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.container{
+    width: 100%;
+    position: absolute;
+    right: 32%;
+}
 .header{
     position: fixed;
     width: 100%;
