--- a/css/entretenimiento.css
+++ b/css/entretenimiento.css
@@ -24,4 +24,12 @@ border-radius: 20px;
 }
 .card{
     font-size: xx-large;
+    box-shadow: 1px 1px 8px 2px #9b9a9a;
+}
+
+.rotar{
+    margin-top: 25%;
+   
+    font-size: 50px;
+    text-shadow: 2px 2px 20px  #9b9a9a;
 }
