--- a/css/piscinas.css
+++ b/css/piscinas.css
@@ -28,4 +28,14 @@ img{
     object-fit: cover;
     object-position: bottom;
 }
+.anclar{
 
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #303134;
+    float: right;
+    margin-bottom: 20px;
+    margin-right: 20px;
+
+}
