--- a/css/monchena.css
+++ b/css/monchena.css
@@ -36,6 +36,9 @@ a{
     border-radius: 4%;
     
 }
+.logo22{
+    border-radius: 50%;
+}
 .fondo{
     background-color: rgb(255, 255, 255);
     color: #777777;
@@ -51,7 +54,7 @@ a{
 }
 .margenesImg{
     display: inline;
-  margin-left: 4%;
+  margin-left: 1%;
 }
 .anclar{
 
