--- a/css/piscinas.css
+++ b/css/piscinas.css
@@ -12,6 +12,11 @@
     height: 30%;
     border-radius: 50%;
 }
+.logo22{
+    border-radius: 50%;
+    height: 10%;
+    width: 10%;
+}
 .ubiciones{
     border-radius: 3%;
     border: 3px solid rgb(0, 0, 0);
@@ -25,6 +30,11 @@ img{
     width: 65%;
     border-radius: 10px;
     height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+header>img {
+ 
     object-fit: cover;
     object-position: bottom;
 }
